# aoc-2021

./: aoc2021.cabal  flake.nix
app/day01/: Main.hs
src/: Day01.hs
test/: Spec.hs
test/Spec/: Day01.hs
