cabal-version:      2.2
name:               aoc2021
version:            0.1.0.0
homepage:           https://github.com/jali-clarke/aoc-2021
license:            NONE
author:             jali-clarke
maintainer:         jinnah.ali-clarke@outlook.com

library
    exposed-modules:
        Day01
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    build-depends:    base ^>=4.14.3.0

executable day01
    hs-source-dirs:   app/day01
    main-is:          Main.hs
    default-language: Haskell2010
    ghc-options:      -Wall -Werror
    build-depends:
        base ^>=4.14.3.0
        , aoc2021

test-suite aoc2021-test
    other-modules:
        Spec.Day01
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    default-language: Haskell2010
    ghc-options: -Wall -Werror
    build-depends:
        base ^>=4.14.3.0
        , aoc2021
        , hspec
